vbnc/vbnc/vbnc/tests/Errors/30691-1.vb
Module bug
	Function Main As Integer
		Dim o As Object
		System.Int32 = o
	End Function
End Module
